# act2txt-rs

./: Cargo.toml  LICENSE.md  README.md
src/: act.rs  main.rs  txt.rs
