[package]
name = "act2txt"
version = "0.1.2"
authors = ["Sedat Kapanoglu <sedat@kapanoglu.com>"]
edition = "2021"
description = "Converts Adobe Photoshop ACT palette files to Paint.NET TXT format"
license = "MIT"
homepage = "https://github.com/ssg/act2txt-rs"

[dependencies]
gumdrop = "0.8.1"
palette = "0.7.6"
