[package]
name = "act2txt"
version = "0.2.2"
authors = ["Sedat Kapanoglu <sedat@kapanoglu.com>"]
edition = "2021"
description = "Converts Adobe Photoshop ACT palette files to Paint.NET TXT format"
license = "MIT"
homepage = "https://github.com/ssg/act2txt-rs"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
palette = "0.7.6"
